tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/nir_subtraction.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(null - null)

